# RTLola-Interpreter

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  check_ignored_tests_without_comment.sh
benches/: endtoend.rs
crates/: Cargo.toml  check_ignored_tests_without_comment.sh  coverage.sh
crates/rtlola-cli/: CHANGELOG.md  Cargo.toml  README.md  rtlola-interpreter-e2e-tests.py
crates/rtlola-cli/src/: basics.rs  config.rs  controller.rs  event_driven_manager.rs  main.rs  output.rs  time_driven_manager.rs
crates/rtlola-cli/src/io/: csv_input.rs  io_handler.rs  mod.rs  output.rs  pcap_input.rs
crates/rtlola-input-plugins/: CHANGELOG.md  Cargo.toml  README.md
crates/rtlola-input-plugins/src/: csv_plugin.rs  lib.rs  network_plugin.rs  pcap_plugin.rs
crates/rtlola-input-plugins/src/network_plugin/: time_converter.rs  upd.rs
crates/rtlola-input-plugins/tests/: lib.rs
crates/rtlola-input-plugins/tests/network_plugin/: mod.rs  udp.rs
crates/rtlola-input-plugins/tests/network_plugin/structs/: input_map.rs  mod.rs
crates/rtlola-interpreter/: CHANGELOG.md  Cargo.toml  README.md
crates/rtlola-interpreter-macros/: CHANGELOG.md  Cargo.toml  README.md
crates/rtlola-interpreter-macros/examples/: custom_names.rs  enum.rs  simple.rs  test.rs  unnamed_struct.rs  verdict.rs
crates/rtlola-interpreter-macros/examples/should-fail/: reject.rs  reject.stderr  reject_composit.rs  reject_composit.stderr  reject_enum.rs  reject_enum.stderr  reject_struct.rs  reject_struct.stderr  reject_value.rs  reject_value.stderr
crates/rtlola-interpreter-macros/src/: composit_factory.rs  enum_composer.rs  helper.rs  input_enums.rs  lib.rs  struct_verdict.rs  value_factory.rs
crates/rtlola-interpreter-macros/src/composit_factory/: enum_composer.rs  enum_factory.rs  struct_factory.rs
crates/rtlola-interpreter-macros/src/struct_verdict/: expand_named_struct.rs
crates/rtlola-interpreter-macros/src/value_factory/: struct_factory.rs
crates/rtlola-interpreter-macros/tests/: compile.rs  composit_derive.rs  derive.rs  derive_input.rs  derive_record.rs  from_values.rs  macro_compile.rs  value_derive.rs  verdict_factory.rs
crates/rtlola-interpreter/benches/: endtoend.rs
crates/rtlola-interpreter/src/: closuregen.rs  evaluator.rs  lib.rs  tests.rs
crates/rtlola-interpreter/src/api/: input.rs  mod.rs  monitor.rs  output.rs  queued.rs
crates/rtlola-interpreter/src/configuration/: config.rs  config_builder.rs  time.rs
crates/rtlola-interpreter/src/schedule/: dynamic_schedule.rs  mod.rs  schedule.rs  schedule_manager.rs
crates/rtlola-interpreter/src/storage/: discrete_window.rs  instance_aggregations.rs  mod.rs  stores.rs  value.rs  window.rs  window_aggregations.rs
crates/rtlola-interpreter/tests/: api_e2e.rs  rtlola-interpreter-e2e-tests.py
crates/rtlola-interpreter/tests/definitions/: add_two_int-holes-explicit_ac.rtlola_interpreter_test  add_two_int_without_holes.rtlola_interpreter_test  parameterized_access.rtlola_interpreter_test  short_offset-holes.rtlola_interpreter_test
crates/rtlola-interpreter/tests/specs/: parameterized_access_complex.lola  periodic_spawn.lola
crates/rtlola-io-plugins/: CHANGELOG.md  Cargo.toml  LICENSE  README.md  expand.rs
crates/rtlola-io-plugins/examples/: tutorial.rs  verdict.rs
crates/rtlola-io-plugins/src/: byte_plugin.rs  csv_plugin.rs  inputs.rs  json_plugin.rs  jsonl_plugin.rs  lib.rs  log_printer.rs  network_plugin.rs  outputs.rs  pcap_plugin.rs
crates/rtlola-io-plugins/src/byte_plugin/: time_converter.rs  upd.rs
crates/rtlola-io-plugins/src/inputs/: byte_plugin.rs  csv_plugin.rs  pcap_plugin.rs
crates/rtlola-io-plugins/src/inputs/byte_plugin/: time_converter.rs  upd.rs
crates/rtlola-io-plugins/src/network_plugin/: time_converter.rs  upd.rs
crates/rtlola-io-plugins/src/outputs/: byte_plugin.rs  csv_plugin.rs  json_plugin.rs  log_printer.rs  statistics_plugin.rs
crates/rtlola-io-plugins/tests/: lib.rs
crates/rtlola-io-plugins/tests/byte_plugin/: mod.rs  tcp.rs  udp.rs
crates/rtlola-io-plugins/tests/byte_plugin/structs/: input_macros.rs  input_map.rs  mod.rs
crates/rtlola-io-plugins/tests/network_plugin/: tcp.rs  udp.rs
crates/rtlola-io-plugins/tests/network_plugin/structs/: input_macros.rs  input_map.rs
crates/tests/specs/: min_max.lola  (+6 more)
src/: closuregen.rs  evaluator.rs  lib.rs  tests.rs
src/basics/: config.rs  csv_input.rs  io_handler.rs  mod.rs  pcap_input.rs
src/configuration/: config.rs  config_builder.rs  mod.rs  time.rs
src/coordination/: controller.rs  dynamic_schedule.rs  event_driven_manager.rs  mod.rs  monitor.rs  time_driven_manager.rs
src/storage/: discrete_window.rs  mod.rs  stores.rs  value.rs  window.rs  window_aggregations.rs
tests/: add_two_int.rtlola_interpreter_test  add_two_int_trigger_message.rtlola_interpreter_test  api_e2e.rs  complex_spawn.rtlola_interpreter_test  count_1_4.rtlola_interpreter_test  delay.rtlola_interpreter_test  delay_advanced.rtlola_interpreter_test  frequencies.rtlola_interpreter_test  hold_access.rtlola_interpreter_test  large_offset.rtlola_interpreter_test  medium_offset.rtlola_interpreter_test  parameterized_access_complex.rtlola_interpreter_test  parameterized_count.rtlola_interpreter_test  parameterized_window.rtlola_interpreter_test  pcap_input.rtlola_interpreter_test  rtlola-interpreter-e2e-tests.py  simple_sliding_window.rtlola_interpreter_test
tests/definitions/: add_two_int-holes-explicit_ac.rtlola_interpreter_test  add_two_int.rtlola_interpreter_test  add_two_int_trigger_message.rtlola_interpreter_test  add_two_int_without_holes.rtlola_interpreter_test  conjunct_in_ac.rtlola_interpreter_test  min_max.rtlola_interpreter_test  pcap_input.rtlola_interpreter_test  periodic_spawn.rtlola_interpreter_test  simple_sliding_window.rtlola_interpreter_test
tests/specs/: complex_spawn.lola  delay.lola  delay_advanced.lola  hold_access.lola  parameterized_access.lola  parameterized_access_complex.lola  parameterized_count.lola  parameterized_window.lola  periodic_spawn.lola
traces/tests/: two_int_streams.csv  two_int_streams_no_holes.csv
(+24 files in other folders)
