[package]
name = "rtlola-interpreter"
version = "0.5.1"
authors = [
    "Florian Kohn <kohn@react.uni-saarland.de>",
    "Malte Schledjewski <schledjewski@react.uni-saarland.de>",
    "Maximilian Schwenger <schwenger@react.uni-saarland.de>",
    "Marvin Stenger <stenger@react.uni-saarland.de>",
    "Leander Tentrup <tentrup@react.uni-saarland.de>"
]
edition = "2018"
description = "An interpreter for RTLola specifications."
readme = "README.md"
homepage = "http://rtlola.org"
repository = "https://github.com/reactive-systems/RTLola-Interpreter"
license = "Apache-2.0"
keywords = ["verification", "interpreter", "monitoring"]

[[bin]]
name = "rtlola-interpreter"
path = "src/bin/rtlola.rs"

[dependencies]
rtlola-frontend = "0.4.2"
ordered-float = "1.0.2"
csv = "1.1.1"
pcap = { version = "0.8.1", optional = true } # pcap file parsing
etherparse = "0.9.0" # Network Packet parser
ip_network = "0.3.4" # IP Address handling
clap = "2.33.0"  # command line parsing
byteorder = "1.3.2"
crossterm = "0.20.0"  # terminal output
bit-set = "0.5.1"
crossbeam-channel = "0.4"
regex = "1.2.1"
humantime = "2.0"
spin_sleep = "0.3.7"
human-panic = { version = "1.0.1", optional = true }
either = "1.5.3"
string_template = "0.2.1" # Format Trigger Messages


[features]
public = ["human-panic"]
pcap_interface = ["pcap"]

[dev-dependencies]
tempfile = "3.1.0"
