[package]
name = "rtlola-cli"
version = "0.1.1"
edition = "2021"
description = "A CLI interface for the RTLola interpreter."
readme = "README.md"
homepage = "http://rtlola.org"
repository = "https://github.com/reactive-systems/RTLola-Interpreter"
license = "Apache-2.0"
keywords = ["verification", "interpreter", "monitoring"]

authors = [
    "Jan Baumeister <jbaumeister@react.uni-saarland.de>",
    "Florian Kohn <kohn@react.uni-saarland.de>",
    "Stefan Oswald <stefano97@gmx.de>",
    "Malte Schledjewski <schledjewski@react.uni-saarland.de>",
    "Maximilian Schwenger <schwenger@react.uni-saarland.de>",
    "Frederik Scheerer <frederik.scheerer@cispa.de>",
    "Marvin Stenger <stenger@react.uni-saarland.de>",
    "Leander Tentrup <tentrup@react.uni-saarland.de>",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rtlola-interpreter = { path = "../rtlola-interpreter" }
rtlola-io-plugins = { path = "../rtlola-io-plugins", default-features = false, features = [
    "csv_plugin", "json_plugin", "statistics_plugin", "log_printer"
] }
clap = { version = "4.0.9", features = [
    "derive",
    "cargo",
    "wrap_help",
] } # command line parsing
clap_complete = "4.0.2"
human-panic = { version = "1.0.1", optional = true }
humantime = "2.0"
atty = "0.2.14"
crossterm = "0.27.0"
termcolor = "1.4.1"

[features]
public = ["human-panic"]
pcap_interface = ["rtlola-io-plugins/pcap_plugin"]
