[package]
name = "rtlola-interpreter-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = {version="2.0", features=["derive"]}
quote = "1.0"
proc-macro-error = "1.0.4"
deluxe = "0.5.0"

[dev-dependencies]
trybuild = "1.0.80"
rtlola-interpreter = {path="../rtlola-interpreter"}

[lib]
proc-macro = true