[package]
name = "rtlola-interpreter"
version = "0.11.0"
authors = [
    "Jan Baumeister <jbaumeister@react.uni-saarland.de>",
    "Florian Kohn <kohn@react.uni-saarland.de>",
    "Stefan Oswald <stefano97@gmx.de>",
    "Malte Schledjewski <schledjewski@react.uni-saarland.de>",
    "Maximilian Schwenger <schwenger@react.uni-saarland.de>",
    "Frederik Scheerer <frederik.scheerer@cispa.de>",
    "Marvin Stenger <stenger@react.uni-saarland.de>",
    "Leander Tentrup <tentrup@react.uni-saarland.de>",
]
edition = "2021"
description = "An interpreter for RTLola specifications."
readme = "README.md"
homepage = "https://rtlola.org"
repository = "https://github.com/reactive-systems/RTLola-Interpreter"
license = "Apache-2.0"
keywords = ["verification", "interpreter", "monitoring"]


[dependencies]
rtlola-frontend = { git = "ssh://git@projects.cispa.saarland/group-finkbeiner/tools/RTLola/RTLola-Frontend.git", branch = "development" }
ordered-float = "3.2.0"
rust_decimal = { version = "1.36.0", features = ["maths"] }                                                                                                                   # accurate floating point addition
num-traits = "0.2.16"

byteorder = "1.3.2"
bit-set = "0.5.1"
bimap = "0.6.3"
dyn-clone = "1.0.12"
crossbeam-channel = { version = "0.5.6", optional = true }
serde = { version = "1.0.145", features = ["derive"], optional = true }
regex = "1.2.1"
humantime = "2.0"
hex = "0.4.3"                                                           # parse hex strings to bytes

either = "1.5.3"
string_template = "0.2.1" # Format Trigger Messages
priority-queue = "1.1.0"  # For the dynamic schedule

itertools = "0.11.0"

uom = { version = "0.31.1", default-features = false, features = [
    "autoconvert",
    "rational64",
    "si",
    "std",
    "use_serde",
] }
num = "0.3.1" # infinite precision rationals

[features]
queued-api = ["dep:crossbeam-channel"]
serde = ["dep:serde", "ordered-float/serde"]
default = ["queued-api"]

[dev-dependencies]
tempfile = "3.1.0"
serde = "1.0.145"
serde_json = "1.0.89"
csv = "1.1.6"
junit-report = "0.8.1"
clap = { version = "4.0.9", features = [
    "derive",
    "cargo",
] } # command line parsing for custom api test
crossterm = "0.25.0" # terminal output

[[test]]
name = "api"
path = "tests/api_e2e.rs"
harness = false
